tests/expectations/compiler/symbols/reserved_keyword_fail.out
Error [ENV03711000]: `finalize` is an invalid program name. A program cannot be called "finalize".
    --> compiler-test:1:9
     |
   1 | program finalize.aleo {
     |         ^^^^^^^^
Error [ENV03711000]: `value` is an invalid struct member name. A struct member cannot be called "value".
    --> compiler-test:3:9
     |
   3 |         value: u32,
     |         ^^^^^
Error [ENV03711000]: `value` is an invalid struct name. A struct cannot be called "value".
    --> compiler-test:6:12
     |
   6 |     struct value {
     |            ^^^^^
Error [ENV03711000]: `owner` is an invalid struct member name. A struct member cannot be called "owner".
    --> compiler-test:7:9
     |
   7 |         owner: u32,
     |         ^^^^^
Error [ENV03711000]: `value` is an invalid record name. A record cannot be called "value".
    --> compiler-test:10:12
     |
  10 |     record value {
     |            ^^^^^
Error [ENV03711000]: `value` is an invalid record member name. A record member cannot be called "value".
    --> compiler-test:11:9
     |
  11 |         value: u32,
     |         ^^^^^
Error [ENV03711000]: `value` is an invalid transition name. A transition cannot be called "value".
    --> compiler-test:15:16
     |
  15 |     transition value() {}
     |                ^^^^^
Error [ENV03711000]: `output` is an invalid transition name. A transition cannot be called "output".
    --> compiler-test:17:22
     |
  17 |     async transition output() -> Future {
     |                      ^^^^^^
Error [ENV03711000]: `key` is an invalid function name. A function cannot be called "key".
    --> compiler-test:22:14
     |
  22 |     function key() {}
     |              ^^^
